@@ -1,5 +1,8 @@
 2008-11-14  Curtis Gedak  <gedakc@gmail.com>
 
+	* include/Utils.h, 
+	  src/Utils.cc: Created method get_filesystem_software().
+
 	* src/Win_GParted.cc: Moved menu entry
 	- "Gparted->Show Features" moved to "View->File System Support".
 
